2007-05-19  Christian Persch  <chpe@gnome.org>

	* embed/ephy-embed-prefs.h:
	* embed/mozilla/mozilla-notifiers.cpp:

	Add pref for smooth scroll, bug #162489.
	Use GSlice to allocate the prefs notifier data.
	Check the pref type.

2007-05-19  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GeckoCookiePromptService.cpp:

	Just use ngettext here, no need for dngettext.

2007-05-19  Christian Persch  <chpe@gnome.org>

	* embed/ephy-cookie-manager.h:
	* embed/mozilla/EphySingle.cpp:

	Store http-only flag too.

2007-05-19  Christian Persch  <chpe@gnome.org>

	* lib/egg/eggtreemultidnd.c:

	Include config.h.

2007-05-19  Christian Persch  <chpe@gnome.org>

	* src/ephy-statusbar.c:

	Make this comment accurate.

2007-05-19  Christian Persch  <chpe@gnome.org>

	* src/prefs-dialog.c: (prefs_dialog_show_help):

	Make this string static.

2007-05-13  Christian Persch  <chpe@gnome.org>

	* configure.ac:

	Post-release version bump.

2007-05-13  Christian Persch  <chpe@gnome.org>

	=== Release 2.19.2 ==

	* configure.ac:

	Update for 2.19.2.

	* po/POTFILES.skip:

	Try to fix distcheck with stupid intltool.

2007-05-08  Felix Riemann  <friemann@svn.gnome.org>

	* lib/egg/egg-toolbar-editor.c: (event_box_realize_cb),
	(editor_create_item_from_name):
	Support using named icons in the toolbareditor and attach them to the
	mouse pointer while dragging them to the toolbar. (bug #436684)

2007-05-04  Diego Escalante Urrelo <diegoe@gnome.org>

	* src/ephy-find-toolbar.c:

	Make Shift+Return find previous when searching. 
	Patch by Robin Stocker.

	Fixes #412033

2007-05-01  Xan Lopez  <xan@gnome.org>

	* lib/widgets/ephy-location-entry.c:
	* lib/widgets/ephy-location-entry.h:
	* src/ephy-completion-model.c:
	* src/ephy-completion-model.h:
	* src/ephy-location-action.c:

	Copy the items on the completion list as the user moves through
	them. The original input can be restored pressing Esc. The tentative
	completion can be made definitive pressing Left or Right.
