@@ -74,6 +74,16 @@
         </locale>
      </schema>
      <schema>
+        <key>/schemas/apps/epiphany/web/smooth_scroll</key>
+        <applyto>/apps/epiphany/web/smooth_scroll</applyto>
+        <owner>epiphany</owner>
+        <type>bool</type>
+        <default>false</default>
+        <locale name="C">
+        <short>Enable smooth scrolling</short>
+        </locale>
+      </schema>
+     <schema>
         <key>/schemas/apps/epiphany/web/minimum_font_size</key>
         <applyto>/apps/epiphany/web/minimum_font_size</applyto>
         <owner>epiphany</owner>
