@@ -1,5 +1,6 @@
 2007-05-19  Christian Persch  <chpe@gnome.org>
 
+	* data/epiphany.schemas.in:
 	* embed/ephy-embed-prefs.h:
 	* embed/mozilla/mozilla-notifiers.cpp:
 
